<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:padding="24dp"
    android:orientation="vertical">

    <TextView
        android:textSize="20sp"
        android:textAlignment="center"
        android:text="@string/exit_game_msj"
        android:layout_width="match_parent"
        android:layout_marginBottom="15dp"
        android:layout_height="wrap_content"/>

    <TextView
        android:textSize="11sp"
        android:textColor="@color/purple_200"
        android:text="@string/alert_dialog_exit_game"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>

    <LinearLayout
        android:layout_marginTop="10dp"
        android:orientation="horizontal"
        android:weightSum="2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <Button
            android:id="@+id/btn_cancel_exit_game"
            android:text="@string/cancelar"
            android:layout_weight="1"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_margin="2dp"
            style="@style/Widget.MaterialComponents.Button.OutlinedButton"
            tools:ignore="ButtonStyle" />

        <Button
            android:layout_margin="2dp"
            android:id="@+id/btn_ok_exit_game"
            android:text="@string/salir"
            android:layout_weight="1"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            tools:ignore="ButtonStyle" />

    </LinearLayout>

</LinearLayout>