<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".MainActivity"
        tools:ignore="ScrollViewSize">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/ly_info"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="50dp"
            android:padding="10dp"
            app:layout_constraintTop_toTopOf="parent">

            <LinearLayout
                android:id="@+id/ly_rewards"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@drawable/bg_rewards"
                android:orientation="vertical"
                android:padding="6dp"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintTop_toTopOf="parent">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/puntos_ganandos"
                    android:textAllCaps="true"
                    android:textColor="@android:color/white" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="0"
                    android:id="@+id/tv_score"
                    android:textAlignment="center"
                    android:textColor="@android:color/white"
                    android:textSize="25sp"
                    android:textStyle="bold"
                    tools:ignore="HardcodedText"
                    tools:text="100" />

            </LinearLayout>

            <TextView
                android:id="@+id/tv_category"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@android:color/darker_gray"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                tools:text="CATEGORIA" />

            <TextView
                android:id="@+id/tv_level"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@android:color/darker_gray"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/tv_category"
                tools:text="Nivel 1" />

            <LinearLayout
                android:id="@+id/ly_submenu"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:orientation="horizontal"
                android:padding="10dp"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/ly_rewards">

                <ImageButton
                    android:id="@+id/btn_exit"
                    style="@style/btn_submenu"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:contentDescription="@string/botton_salir_de_partida"
                    android:src="@drawable/exit_to_app" />

                <ImageButton
                    android:id="@+id/btn_see_score_users"
                    style="@style/btn_submenu"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:contentDescription="@string/boton_ver_puntuaciones"
                    android:src="@drawable/clipboard_list_outline" />

            </LinearLayout>

        </androidx.constraintlayout.widget.ConstraintLayout>

        <TextView
            android:id="@+id/tv_question"
            style="@style/TextAppearance.AppCompat.Large"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:textAllCaps="true"
            android:textAlignment="center"
            android:padding="5dp"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/ly_info"
            tools:text="¿AQUI VA LA PREGUNTa?" />

        <RadioGroup
            android:id="@+id/radiogroup_question"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="10dp"
            app:layout_constraintTop_toBottomOf="@+id/tv_question">

            <RadioButton
                android:id="@+id/radiobt_opt01"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                tools:text="OPT01" />

            <RadioButton
                android:id="@+id/radiobt_opt02"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                tools:text="OPT02" />

            <RadioButton
                android:id="@+id/radiobt_opt03"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                tools:text="OPT03" />

            <RadioButton
                android:id="@+id/radiobt_opt04"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                tools:text="OPT04" />

        </RadioGroup>

        <Button
            android:id="@+id/btn_next"
            android:enabled="false"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="15dp"
            android:padding="15dp"
            android:text="@string/next"
            app:layout_constraintBottom_toBottomOf="parent" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</ScrollView>